Fixed slider indicator not covering the background entirely in the first position

--- a/app/scss/brands/maytag/_ng-slider.scss
+++ b/app/scss/brands/maytag/_ng-slider.scss
@@ -160,7 +160,7 @@ div.people6 .jslider.vertical .jslider-value:not(.jslider-value-to) {
 	.jslider {
 		cursor: pointer; 
 		display: block; 
-		width: 94.5%; 
+		width: 94.7%; 
 		height: 1em; 
 		position: relative; 
 		top: 0.6em; 
@@ -433,7 +433,7 @@ div.people6 .jslider.vertical .jslider-value:not(.jslider-value-to) {
 			// height: 66px;
 
 			z-index: 50;
-			width: 86px;
+			width: 82px;
 			height: 74px;
 			background: url('../img/slider-pointer.png') center center no-repeat !important;
 			background-size: 86px 74px;
