--- a/app/scss/structure/_results.scss
+++ b/app/scss/structure/_results.scss
@@ -1,7 +1,7 @@
 #results {
 	.price-slider {
 		.jslider {
-			width: 100%; 
+			width: 101%; 
 		}
 	}
 	.results-top {
